Fix warning message alignment

--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ button[disabled]{
 body {
   font-family: 'Noto Sans';
   color: #002F5D;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 footer {
